fix: 移除tailwind.css中的overflow-x屬性以改善滾動行為

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -19,7 +19,6 @@ body, * {
 	/* IE and Edge */
 	scrollbar-width: none;
 	/* Firefox */
-	overflow-x: hidden;
 	-webkit-tap-highlight-color: transparent;
 }
 
